--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set( CMAKE_CXX_STANDARD_REQUIRED ON )
 set( CMAKE_CXX_EXTENSIONS OFF )
 
 add_subdirectory( libsrc )
+add_subdirectory( src )
 
 enable_testing()
 add_subdirectory( test )
