Add header install, more unit tests and a bugfix

--- a/libsrc/CMakeLists.txt
+++ b/libsrc/CMakeLists.txt
@@ -19,3 +19,6 @@ install( TARGETS pktdecoder
       DESTINATION /tmp/lib
       LIBRARY
       COMPONENT library )
+
+install( FILES pkt_decoder.h
+      DESTINATION /tmp/include )
